--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,18 @@
 [[redirects]]
+from = "/"
+to = "https://swiftpackageindex.com/blog"
+headers = { X-From = "Netlify" }
+status = 301
+force = true
+
+[[redirects]]
+from = "/posts/?"
+to = "https://swiftpackageindex.com/blog"
+headers = { X-From = "Netlify" }
+status = 301
+force = true
+
+[[redirects]]
 from = "/posts/:post_name"
 to = "https://swiftpackageindex.com/blog/:post_name/?"
 headers = { X-From = "Netlify" }
@@ -8,5 +22,6 @@ force = true
 [[redirects]]
 from = "/feed.rss"
 to = "https://swiftpackageindex.com/blog/feed.xml"
+headers = { X-From = "Netlify" }
 status = 301
 force = true
