I don’t think wildcards work.

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,14 @@ status = 301
 force = true
 
 [[redirects]]
-from = "/posts/?"
+from = "/posts"
+to = "https://swiftpackageindex.com/blog"
+headers = { X-From = "Netlify" }
+status = 301
+force = true
+
+[[redirects]]
+from = "/posts/"
 to = "https://swiftpackageindex.com/blog"
 headers = { X-From = "Netlify" }
 status = 301
@@ -14,6 +21,13 @@ force = true
 
 [[redirects]]
 from = "/posts/:post_name"
+to = "https://swiftpackageindex.com/blog/:post_name/?"
+headers = { X-From = "Netlify" }
+status = 301
+force = true
+
+[[redirects]]
+from = "/posts/:post_name/"
 to = "https://swiftpackageindex.com/blog/:post_name/?"
 headers = { X-From = "Netlify" }
 status = 301
